fixup! feat: progress-flow component
fixed layout issues with alternative UI, where small containers
caused texts step to overlap

--- a/src/components/progress-flow/progress-flow-item/partial-styles/_has-detached-steps.scss
+++ b/src/components/progress-flow/progress-flow-item/partial-styles/_has-detached-steps.scss
@@ -95,16 +95,25 @@
                 }
             }
         }
+
+        .icon {
+            margin-left: auto;
+        }
     }
 
     .icon {
-        margin: 0;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
     }
 
+    .text,
+    .secondary-text {
+        padding: 0 pxToRem(4);
+    }
     .text {
-        position: absolute;
-        top: 0;
-        transform: translateY(calc(-100% - #{pxToRem(4)}));
+        transform: translateY(calc(-100% - #{pxToRem(12)}));
         font-size: pxToRem(13);
     }
 
